--- a/themes/custom/chancellor/scss/chancellor-global.scss
+++ b/themes/custom/chancellor/scss/chancellor-global.scss
@@ -2,6 +2,7 @@
 @import "modules/_colors.scss";
 body {
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: none;
 }
 
 body.layout-boxed  {
