--- a/themes/cuchancellor/css/cuchancellor-styles.css
+++ b/themes/cuchancellor/css/cuchancellor-styles.css
@@ -2,9 +2,11 @@ body.layout-boxed { background-color: #fafafa; }
 
 body.layout-wide { background-color: #000; }
 
-.layout-boxed #page { width: 960px; margin: 0 auto; -webkit-box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.25); -moz-box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.25); box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.25); }
+.layout-boxed #page { width: 960px; margin: 0 auto; }
 
 .top-content { background-color: #fff; }
+
+#navigation-wrapper { flex-direction: column; }
 
 #footer-section { border-top: 5px solid #cfb87c; background-repeat: repeat-x; color: #fff; }
 #footer-section a:link, #footer-section a:visited { color: #cfb87c; }
@@ -14,7 +16,7 @@ body.layout-wide { background-color: #000; }
 
 #site-info-wrapper { background-color: #000; padding: 40px 0 20px; }
 
-#slider-wrapper { background-color: #f7f7f7; background-image: url(../images/content-shadow.png); background-repeat: repeat-x; border-bottom: 1px solid #d7d7d7; }
+#slider-wrapper { background-color: #fff; background-image: url(../images/content-shadow.png); background-repeat: repeat-x; border-bottom: 1px solid #d7d7d7; }
 
 #secondary-menu-wrapper { background-color: #333; border-top: 1px solid #555; border-bottom: 5px solid #cfb87c; color: #aaa; line-height: 30px; }
 #secondary-menu-wrapper a { padding: 0 10px; color: #bbb; border-left: 1px solid #555; }
@@ -23,7 +25,7 @@ body.layout-wide { background-color: #000; }
 
 #secondary-navigation nav { float: none; }
 
-#main-menu-wrapper { background-color: #fff; background-color: #ffffff; background-color: #555555; background-image: -webkit-gradient(linear, left top, left bottom, from(#555555), to(#444444)); background-image: -webkit-linear-gradient(top, #555555, #444444); background-image: -moz-linear-gradient(top, #555555, #444444); background-image: -o-linear-gradient(top, #555555, #444444); background-image: -ms-linear-gradient(top, #555555, #444444); background-image: linear-gradient(top, #555555, #444444); filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF555555', EndColorStr='#FF444444'); }
+#main-menu-wrapper { background-color: #fff; background-color: #ffffff; background-color: #555; background-image: -webkit-gradient(linear, left top, left bottom, from(#555), to(#444)); background-image: -webkit-linear-gradient(top, #555, #444); background-image: -moz-linear-gradient(top, #555, #444); background-image: -o-linear-gradient(top, #555, #444); background-image: -ms-linear-gradient(top, #555, #444); background-image: linear-gradient(top, #555, #444); filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF555555', EndColorStr='#FF444444'); }
 
 .banner-white #main-menu-wrapper { border-top: 1px solid #e7e7e7; background-color: #fafafa; background-image: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#f1f1f1)); background-image: -webkit-linear-gradient(top, #fafafa, #f1f1f1); background-image: -moz-linear-gradient(top, #fafafa, #f1f1f1); background-image: -o-linear-gradient(top, #fafafa, #f1f1f1); background-image: -ms-linear-gradient(top, #fafafa, #f1f1f1); background-image: linear-gradient(top, #fafafa, #f1f1f1); filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FFFAFAFA', EndColorStr='#FFF1F1F1'); }
 
@@ -33,7 +35,7 @@ body.layout-wide { background-color: #000; }
 .banner-black #main-menu-wrapper a.active, .banner-black #main-menu-wrapper a.active-trail { background-color: #222; color: #fff; border: none; }
 
 .banner-white #main-menu-wrapper a:hover { color: #363636; }
-.banner-white #main-menu-wrapper a.active, .banner-white #main-menu-wrapper a.active-trail { background-color: #fff; color: #363636; border-top: 1px solid #fff; margin-top: -1px; background-color: white; background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#fafafa)); background-image: -webkit-linear-gradient(top, white, #fafafa); background-image: -moz-linear-gradient(top, white, #fafafa); background-image: -o-linear-gradient(top, white, #fafafa); background-image: -ms-linear-gradient(top, white, #fafafa); background-image: linear-gradient(top, #ffffff, #fafafa); filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FFFFFFFF', EndColorStr='#FFFAFAFA'); }
+.banner-white #main-menu-wrapper a.active, .banner-white #main-menu-wrapper a.active-trail { background-color: #fff; color: #363636; border-top: 1px solid #fff; margin-top: -1px; background-color: #ffffff; background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#fafafa)); background-image: -webkit-linear-gradient(top, #ffffff, #fafafa); background-image: -moz-linear-gradient(top, #ffffff, #fafafa); background-image: -o-linear-gradient(top, #ffffff, #fafafa); background-image: -ms-linear-gradient(top, #ffffff, #fafafa); background-image: linear-gradient(top, #ffffff, #fafafa); filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FFFFFFFF', EndColorStr='#FFFAFAFA'); }
 
 #main-menu-wrapper a#home-link { background-color: transparent; color: #ddd; border: none; }
 
@@ -41,16 +43,16 @@ body.layout-wide { background-color: #000; }
 
 #after-content2-wrapper { background-color: #f5f5f5; border-top: 1px solid #e7e7e7; padding: 40px 0 20px; }
 
-.view-from-the-chancellor .views-row { padding-bottom: 5px; margin-bottom: 5px; border-bottom: 1px solid #e0e0e0; }
+.view-from-the-chancellor .views-row { padding-bottom: 5px; margin-bottom: 5px; border-bottom: 1px solid rgba(128, 128, 128, 0.333); }
 .view-from-the-chancellor .views-row-last { border: none; margin-bottom: 0; }
 
 #block-menu-block-site-navigation-menus-1 .menu-block-wrapper, #block-menu-block-site-navigation-menus-2 .menu-block-wrapper, #block-menu-block-site-navigation-menus-3 .menu-block-wrapper, #section-navigation .menu-block-wrapper { font-weight: 500; border-bottom: 1px solid #e7e7e7; }
 #block-menu-block-site-navigation-menus-1 ul.menu a, #block-menu-block-site-navigation-menus-2 ul.menu a, #block-menu-block-site-navigation-menus-3 ul.menu a, #section-navigation ul.menu a { padding: 10px; border: 1px solid #e7e7e7; margin-bottom: -1px; color: #656565; line-height: 120%; }
 #block-menu-block-site-navigation-menus-1 ul.menu a:hover, #block-menu-block-site-navigation-menus-1 ul.menu a:focus, #block-menu-block-site-navigation-menus-2 ul.menu a:hover, #block-menu-block-site-navigation-menus-2 ul.menu a:focus, #block-menu-block-site-navigation-menus-3 ul.menu a:hover, #block-menu-block-site-navigation-menus-3 ul.menu a:focus, #section-navigation ul.menu a:hover, #section-navigation ul.menu a:focus { background-color: #e7e7e7; color: #202020; }
 #block-menu-block-site-navigation-menus-1 ul.menu a.active-trail, #block-menu-block-site-navigation-menus-2 ul.menu a.active-trail, #block-menu-block-site-navigation-menus-3 ul.menu a.active-trail, #section-navigation ul.menu a.active-trail { border-bottom: none; }
-#block-menu-block-site-navigation-menus-1 ul.menu a.active, #block-menu-block-site-navigation-menus-2 ul.menu a.active, #block-menu-block-site-navigation-menus-3 ul.menu a.active, #section-navigation ul.menu a.active { color: white; background-color: #333333; font-weight: 500 !important; }
-#block-menu-block-site-navigation-menus-1 li.active-trail, #block-menu-block-site-navigation-menus-2 li.active-trail, #block-menu-block-site-navigation-menus-3 li.active-trail, #section-navigation li.active-trail { border-left: 3px solid #333333; }
-#block-menu-block-site-navigation-menus-1 li.active-trail a, #block-menu-block-site-navigation-menus-2 li.active-trail a, #block-menu-block-site-navigation-menus-3 li.active-trail a, #section-navigation li.active-trail a { border-left-color: #333333; }
+#block-menu-block-site-navigation-menus-1 ul.menu a.active, #block-menu-block-site-navigation-menus-2 ul.menu a.active, #block-menu-block-site-navigation-menus-3 ul.menu a.active, #section-navigation ul.menu a.active { color: #fff; background-color: #333; font-weight: 500 !important; }
+#block-menu-block-site-navigation-menus-1 li.active-trail, #block-menu-block-site-navigation-menus-2 li.active-trail, #block-menu-block-site-navigation-menus-3 li.active-trail, #section-navigation li.active-trail { border-left: 3px solid #333; }
+#block-menu-block-site-navigation-menus-1 li.active-trail a, #block-menu-block-site-navigation-menus-2 li.active-trail a, #block-menu-block-site-navigation-menus-3 li.active-trail a, #section-navigation li.active-trail a { border-left-color: #333; }
 #block-menu-block-site-navigation-menus-1 li.active-trail li, #block-menu-block-site-navigation-menus-2 li.active-trail li, #block-menu-block-site-navigation-menus-3 li.active-trail li, #section-navigation li.active-trail li { border: none; }
 #block-menu-block-site-navigation-menus-1 ul.menu ul.menu a, #block-menu-block-site-navigation-menus-2 ul.menu ul.menu a, #block-menu-block-site-navigation-menus-3 ul.menu ul.menu a, #section-navigation ul.menu ul.menu a { padding-left: 20px; font-size: 90%; padding-top: 7px; padding-bottom: 7px; border-top: none; border-bottom: none; font-weight: normal; }
 #block-menu-block-site-navigation-menus-1 ul.menu ul.menu ul.menu a, #block-menu-block-site-navigation-menus-2 ul.menu ul.menu ul.menu a, #block-menu-block-site-navigation-menus-3 ul.menu ul.menu ul.menu a, #section-navigation ul.menu ul.menu ul.menu a { padding-left: 30px; }
@@ -59,7 +61,7 @@ body.layout-wide { background-color: #000; }
 #block-menu-block-site-navigation-menus-1 ul.menu ul.menu ul.menu ul.menu ul.menu ul.menu a, #block-menu-block-site-navigation-menus-2 ul.menu ul.menu ul.menu ul.menu ul.menu ul.menu a, #block-menu-block-site-navigation-menus-3 ul.menu ul.menu ul.menu ul.menu ul.menu ul.menu a, #section-navigation ul.menu ul.menu ul.menu ul.menu ul.menu ul.menu a { padding-left: 60px; }
 
 #block-menu-block-site-navigation-menus-3 h2.block-title { font-size: 100%; line-height: 120%; padding: 0; margin: 0; }
-#block-menu-block-site-navigation-menus-3 h2.block-title a { display: block; padding: 10px; background-color: #333333; color: white; font-weight: 600; }
+#block-menu-block-site-navigation-menus-3 h2.block-title a { display: block; padding: 10px; background-color: #333; color: #fff; font-weight: 600; }
 
 #mobile-navigation-wrapper { background-color: #222; color: #fff; }
 #mobile-navigation-wrapper ul#main-menu-mobile, #mobile-navigation-wrapper ul#footer-menu-mobile { background-color: #333; }
